# rust-ai-streambot

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: rust.yml
fonts/: LICENSE.md  README.md  unpack_fonts.sh
scripts/: compile.sh  mpeg_analyzer.sh  mpeg_poetry.sh  system_analyzer.sh  system_health.sh  twitch.sh
src/: args.rs  audio.rs  candle_gemma.rs  candle_metavoice.rs  candle_mistral.rs  lib.rs  main.rs  mimic3_tts.rs  mpegts.rs  ndi.rs  network_capture.rs  openai_api.rs  openai_tts.rs  pipeline.rs  sd_automatic.rs  stable_diffusion.rs  stream_data.rs  system_stats.rs  twitch_client.rs
