[package]
name = "rsllm"
description = "Rust AI Stream Analyzer Twitch Bot"
keywords = ["ai", "stable-diffusion", "ndi", "text-to-speech", "twitch"]
categories = ["command-line-utilities"]
readme = "README.md"
documentation = "https://docs.rs/rsllm"
license-file = "LICENSE"
homepage = "https://github.com/groovybits/rsllm/wiki"
repository = "https://github.com/groovybits/rsllm"
authors = ["Chris Kennedy"]
version = "0.6.3"
edition = "2021"

[lib]
path = "s